tests/NormalTests/paczka1/fuzzy1/61489854.err
Error in line 9: y4b6NrwanJk A234 27,2
Error in line 12: RwMCd3uUr A648 aa,5
Error in line 7: CCRU6 A648 87,1
Error in line 15: CCRU6 S384 76,4
Error in line 29: A648 S39 44,5
Error in line 10: RwMCd3uUr A648 14,6
